--- a/TwElm-users/package.json
+++ b/TwElm-users/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "joi": "^8.0.5",
+    "lodash": "^4.11.1",
     "mongodb": "^2.1.16"
   },
   "devDependencies": {
