Dockerizing the application

--- a/TwElm-users/package.json
+++ b/TwElm-users/package.json
@@ -10,7 +10,8 @@
     "test-api": "npm run migrate-up; ./node_modules/mocha/bin/mocha tests/api/ --recursive; npm run migrate-down",
     "migrate-up": "node ./node_modules/mongodb-migrate -runmm -cfg 'config/mongo.local.json' up",
     "migrate-down": "node ./node_modules/mongodb-migrate -runmm -cfg 'config/mongo.local.json' down",
-    "dev": "./node_modules/nodemon/bin/nodemon.js src/app.js"
+    "dev": "./node_modules/nodemon/bin/nodemon.js src/app.js",
+    "start": "node src/app.js"
   },
   "author": "viniciusffj",
   "license": "ISC",
